cabal-version:      3.16
name:               synarchy
version:            0.1.0.0
synopsis:           Vulkan-based colony-simulation game with procedural worlds
description:
    Synarchy is a colony-simulation game and engine written in Haskell:
    a bindless Vulkan renderer with GLFW windowing, a multi-threaded
    engine core (render, input, world, unit, and Lua scripting threads
    communicating over STM), procedural world generation with geological,
    hydrological, and climate simulation, and game logic driven from an
    embedded Lua scripting API.
    .
    This package is developed and built from its source repository; it is
    not published to Hackage. See README.md for build and test
    instructions and CLAUDE.md for the full development workflow.
homepage:           https://github.com/coghex/synarchy
bug-reports:        https://github.com/coghex/synarchy/issues
license:            MIT
license-file:       LICENSE
author:             coghex
maintainer:         vincecoghlan@gmail.com
category:           Game
build-type:         Custom
tested-with:        GHC ==9.12.2
extra-doc-files:    CHANGELOG.md
                    README.md
                    CLAUDE.md
-- The sdist is the source tree: besides the headers for the c-sources
-- below (which sdist does not pick up from include-dirs on its own),
-- ship the runtime/test resources the engine and test suites load from
-- relative paths at run time — game-data YAML, image/font assets, the
-- Lua game scripts, and the versioned config templates. The config
-- entries are enumerated (not globbed) on purpose: config/ also holds
-- gitignored local runtime state (keybinds.yaml, video.yaml,
-- notifications.yaml, #638) that a glob would leak into the tarball.
extra-source-files: cbits/*.h
                    data/**/*.yaml
                    assets/**/*.png
                    assets/**/*.ttf
                    scripts/**/*.lua
                    config/keybinds_default.yaml
                    config/pathing.yaml
                    config/video_default.yaml
                    config/world_gen_default.yaml

source-repository head
    type:     git
    location: https://github.com/coghex/synarchy.git

-- Setup.hs only clears the macOS quarantine xattr from freshly built
-- artifacts after each build; everything else is stock Cabal.
custom-setup
    setup-depends: base >=4.17 && <5
                 , Cabal >=3.16 && <3.17
                 , directory >=1.3 && <1.4
                 , process >=1.6 && <1.7

flag dev
    description: Development profile - Vulkan validation layers, ENGINE_DEBUG
                 plumbing, and (macOS) address sanitizer for the graphical
                 test suite. Give it its own build dir; see CLAUDE.md.
    default: False
    manual: True

flag profile
    description: Cost-centre profiling (-fprof-late on top of the prod -O2);
                 see CLAUDE.md for the full recipe.
    default: False
    manual: True

-- Shared warning policy (#435): prod is the default for all routine
-- work, so it must carry the full warning set. Keep this the single
-- source of truth — don't re-add warning flags inside per-component
-- stanzas or the build-policy conditionals below.
common warnings
    ghc-options: -Wall
                 -Wcompat
                 -Wincomplete-record-updates
                 -Wincomplete-uni-patterns
                 -Wincomplete-patterns
                 -Wno-ambiguous-fields
                 -- name-shadowing: ~70 pre-existing shadows; bulk renames
                 -- risk the wrong-variable bugs the warning guards against.
                 -- Revisit incrementally, not as a sweep (#435).
                 -Wno-name-shadowing
                 -- type-defaults: all literal defaulting in log/format
                 -- code; annotating adds noise without catching bugs.
                 -Wno-type-defaults

common lang
    default-language: GHC2024
    default-extensions: DefaultSignatures
                      , DuplicateRecordFields
                      , MagicHash
                      , NoMonomorphismRestriction
                      , NoImplicitPrelude
                      , NumDecimals
                      , OverloadedStrings
                      , PatternSynonyms
                      , QuantifiedConstraints
                      , RecordWildCards
                      , TypeFamilyDependencies
                      , UnicodeSyntax
                      , ViewPatterns
                      , QuasiQuotes

-- Shared dev/prod/profile option policy (#635). Before this existed as
-- four hand-copied conditional blocks that had silently drifted apart;
-- any change to profile options belongs HERE, not in a component stanza.
-- Per-component extras are limited to RTS options (executables/tests)
-- and the graphical suite's macOS address sanitizer.
common build-policy
    ghc-options: -threaded
    if flag(dev)
      cpp-options: -DDEVELOPMENT
      -- No explicit -O here: Cabal's default -O1 already applies, and
      -- `cabal check` rejects spelling it out.
      ghc-options: -haddock
      if os(darwin)
        cpp-options: -DDARWIN
        ghc-options: -optP-Wno-nonportable-include-path
                     -fno-full-laziness
                     -fno-cse
                     -fPIC
                     -optl-Wl,-dead_strip
                     -optl-Wl,-bind_at_load
    else
      -- `cabal check` warns that -O2 is "rarely needed"; here it is
      -- deliberate and load-bearing: the prod profile is documented as
      -- -O2 -optc-O3 (CLAUDE.md) and worldgen/render throughput depends
      -- on it. Accepted warning, not an oversight.
      ghc-options: -O2
                   -optc-O3
                   -fexcess-precision
                   -feager-blackholing
      if os(darwin)
        cpp-options: -DDARWIN
        ghc-options: -optP-Wno-nonportable-include-path
    if flag(profile)
      ghc-options: -fprof-late

-- Dependency bounds policy: only `base` (and the custom-setup deps)
-- carry explicit upper bounds — that is the one `cabal check` treats as
-- an error. This package is built from this repository against a pinned
-- toolchain (see tested-with), not released to Hackage, so speculative
-- PVP upper bounds on the ~35 direct dependencies would only cause
-- solver churn; `cabal check`'s missing-upper-bounds warning on the
-- rest is accepted deliberately (#635).

library
    import: warnings, lang, build-policy
    -- Expose the modules you want to test
    exposed-modules: UPrelude
                     Math
                     Engine.Asset.Base
                     Engine.Asset.Types
                     Engine.Asset.Handle
                     Engine.Asset.Manager
                     Engine.Asset.YamlTextures
                     Engine.Asset.YamlFlora
                     Engine.Asset.YamlUnits
                     Engine.Asset.YamlNames
                     Engine.Asset.YamlNotifications
                     Engine.PlayerEvent
                     Engine.PlayerEvent.Emit
                     Engine.Graphics.Base
                     Engine.Graphics.Camera
                     Engine.Graphics.Viewport
                     Engine.Graphics.Types
                     Engine.Graphics.Config
                     Engine.Graphics.Vulkan.Base
                     Engine.Graphics.Vulkan.Buffer
                     Engine.Graphics.Vulkan.BufferUtils
                     Engine.Graphics.Vulkan.Capability
                     Engine.Graphics.Vulkan.Command
                     Engine.Graphics.Vulkan.Command.Record
                     Engine.Graphics.Vulkan.Command.Sprite
                     Engine.Graphics.Vulkan.Command.Text
                     Engine.Graphics.Vulkan.Descriptor
                     Engine.Graphics.Vulkan.Device
                     Engine.Graphics.Vulkan.Framebuffer
                     Engine.Graphics.Vulkan.Image
                     Engine.Graphics.Vulkan.Init
                     Engine.Graphics.Vulkan.Instance
                     Engine.Graphics.Vulkan.MSAA
                     Engine.Graphics.Vulkan.Pipeline
                     Engine.Graphics.Vulkan.Pipeline.Bindless
                     Engine.Graphics.Vulkan.Recreate
                     Engine.Graphics.Vulkan.Sampler.Types
                     Engine.Graphics.Vulkan.Sampler.Cache
                     Engine.Graphics.Vulkan.ShaderCode
                     Engine.Graphics.Vulkan.Swapchain
                     Engine.Graphics.Vulkan.Sync
                     Engine.Graphics.Vulkan.Types
                     Engine.Graphics.Vulkan.Types.Cleanup
                     Engine.Graphics.Vulkan.Types.Descriptor
                     Engine.Graphics.Vulkan.Types.Texture
                     Engine.Graphics.Vulkan.Types.Vertex
                     Engine.Graphics.Vulkan.Texture
                     Engine.Graphics.Vulkan.Texture.Undefined
                     Engine.Graphics.Vulkan.Texture.DefaultFaceMap
                     Engine.Graphics.Vulkan.Texture.Types
                     Engine.Graphics.Vulkan.Texture.Slot
                     Engine.Graphics.Vulkan.Texture.System
                     Engine.Graphics.Vulkan.Texture.Handle
                     Engine.Graphics.Vulkan.Texture.Bindless
                     Engine.Graphics.Vulkan.Vertex
                     Engine.Graphics.Window.GLFW
                     Engine.Graphics.Window.Types
                     Engine.Graphics.Font.Atlas
                     Engine.Graphics.Font.Data
                     Engine.Graphics.Font.Draw
                     Engine.Graphics.Font.Load
                     Engine.Graphics.Font.SDF
                     Engine.Graphics.Font.Upload
                     Engine.Graphics.Font.Util
                     Engine.Graphics.Font.STB
                     Engine.Graphics.Transform
                     Engine.Input.Bindings
                     Engine.Input.Callback
                     Engine.Input.State
                     Engine.Input.Types
                     Engine.Input.Thread
                     Engine.Scripting.Types
                     Engine.Scripting.Lua.Debug
                     Engine.Scripting.Lua.DebugServer
                     Engine.Scripting.Lua.Types
                     Engine.Scripting.Lua.Material
                     Engine.Scripting.Lua.Message
                     Engine.Scripting.Lua.Message.Video
                     Engine.Scripting.Lua.Message.Texture
                     Engine.Scripting.Lua.Message.Scene
                     Engine.Scripting.Lua.Message.WorldTexture
                     Engine.Scripting.Lua.Thread
                     Engine.Scripting.Lua.Script
                     Engine.Scripting.Lua.Util
                     Engine.Scripting.Lua.API
                     Engine.Scripting.Lua.API.Internal
                     Engine.Scripting.Lua.API.Register.Engine
                     Engine.Scripting.Lua.API.Register.UI
                     Engine.Scripting.Lua.API.Register.Unit
                     Engine.Scripting.Lua.API.Register.Building
                     Engine.Scripting.Lua.API.Register.Designation
                     Engine.Scripting.Lua.API.Register.Equipment
                     Engine.Scripting.Lua.API.Register.Craft
                     Engine.Scripting.Lua.API.Register.Item
                     Engine.Scripting.Lua.API.Register.World
                     Engine.Scripting.Lua.API.Register.Camera
                     Engine.Scripting.Lua.API.Core
                     Engine.Scripting.Lua.API.Camera
                     Engine.Scripting.Lua.API.Debug
                     Engine.Scripting.Lua.API.Log
                     Engine.Scripting.Lua.API.Config
                     Engine.Scripting.Lua.API.Save
                     Engine.Scripting.Lua.API.PlayerEvent
                     Engine.Scripting.Lua.API.Graphics
                     Engine.Scripting.Lua.API.Input
                     Engine.Scripting.Lua.API.Keybinds
                     Engine.Scripting.Lua.API.Text
                     Engine.Scripting.Lua.API.Focus
                     Engine.Scripting.Lua.API.Shell
                     Engine.Scripting.Lua.API.UI
                     Engine.Scripting.Lua.API.UI.Page
                     Engine.Scripting.Lua.API.UI.Element
                     Engine.Scripting.Lua.API.UI.Hierarchy
                     Engine.Scripting.Lua.API.UI.Focus
                     Engine.Scripting.Lua.API.UI.TextInput
                     Engine.Scripting.Lua.API.UI.Property
                     Engine.Scripting.Lua.API.UI.Tooltip
                     Engine.Scripting.Lua.API.Units
                     Engine.Scripting.Lua.API.Units.Yaml
                     Engine.Scripting.Lua.API.Units.Spawn
                     Engine.Scripting.Lua.API.Units.Survival
                     Engine.Scripting.Lua.API.Units.Query
                     Engine.Scripting.Lua.API.Units.List
                     Engine.Scripting.Lua.API.Units.Combat
                     Engine.Scripting.Lua.API.Units.Equipment
                     Engine.Scripting.Lua.API.Units.Inventory
                     Engine.Scripting.Lua.API.Units.Cargo
                     Engine.Scripting.Lua.API.Units.Stats
                     Engine.Scripting.Lua.API.Units.Selection
                     Engine.Scripting.Lua.API.Units.Medical
                     Engine.Scripting.Lua.API.World
                     Engine.Scripting.Lua.API.World.GenConfig
                     Engine.Scripting.Lua.API.World.Lifecycle
                     Engine.Scripting.Lua.API.World.Clock
                     Engine.Scripting.Lua.API.World.Cursor
                     Engine.Scripting.Lua.API.World.Designation
                     Engine.Scripting.Lua.API.World.Query
                     Engine.Scripting.Lua.API.World.Tools
                     Engine.Scripting.Lua.API.World.Edit
                     Engine.Scripting.Lua.API.WorldQuery
                     Engine.Scripting.Lua.API.WorldQuery.Lookup
                     Engine.Scripting.Lua.API.WorldQuery.Terrain
                     Engine.Scripting.Lua.API.WorldQuery.Fluid
                     Engine.Scripting.Lua.API.WorldQuery.Chunk
                     Engine.Scripting.Lua.API.WorldQuery.River
                     Engine.Scripting.Lua.API.WorldQuery.Climate
                     Engine.Scripting.Lua.API.WorldQuery.Pick
                     Engine.Scripting.Lua.API.WorldQuery.Location
                     Engine.Scripting.Lua.API.Forage
                     Engine.Scripting.Lua.API.Flora
                     Engine.Scripting.Lua.API.YamlTextures
                     Engine.Core.Defaults
                     Engine.Core.Init
                     Engine.Core.Monad
                     Engine.Core.State
                     Engine.Core.Types
                     Engine.Core.Log
                     Engine.Core.Log.Types
                     Engine.Core.Log.Env
                     Engine.Core.Log.Format
                     Engine.Core.Log.Monad
                     Engine.Core.Thread
                     Engine.Core.Error.Exception
                     Engine.Core.Resource
                     Engine.Core.Queue
                     Engine.Core.Var
                     Engine.Scene.Base
                     Engine.Scene.Batch
                     Engine.Scene.Batch.Sprite
                     Engine.Scene.Batch.Text
                     Engine.Scene.Batch.Update
                     Engine.Scene.Batch.Vertex
                     Engine.Scene.Batch.Visibility
                     Engine.Scene.Types
                     Engine.Scene.Types.Batch
                     Engine.Scene.Types.Graph
                     Engine.Scene.Types.Manager
                     Engine.Scene.Types.Node
                     Engine.Scene.Graph
                     Engine.Scene.Manager
                     Engine.Scene.Render
                     Engine.Loop
                     Engine.Loop.Timing
                     Engine.Loop.Frame
                     Engine.Loop.Camera
                     Engine.Loop.Resource
                     Engine.Loop.Headless
                     Engine.Loop.Shutdown
                     UI
                     UI.Types
                     UI.Focus
                     UI.Manager
                     UI.Manager.Core
                     UI.Manager.Page
                     UI.Manager.Element
                     UI.Manager.Hierarchy
                     UI.Manager.Focus
                     UI.Manager.Property
                     UI.Manager.Query
                     UI.Manager.Text
                     UI.Manager.BoxTexture
                     UI.Render
                     UI.TextBuffer
                     UI.Tooltip
                     UI.Tooltip.Layout
                     UI.Tooltip.Lock
                     UI.Tooltip.Render
                     UI.Tooltip.State
                     Unit.Types
                     Unit.Anim
                     Unit.Stats
                     Unit.Render
                     Unit.Sprite
                     Unit.Selection
                     Unit.HitTest
                     Unit.LineOfSight
                     Unit.Pathing.Config
                     Unit.Pathing.Cost
                     Unit.Pathing.AStar
                     Unit.Fall
                     Unit.Injury
                     Unit.Command.Types
                     Unit.Direction
                     Unit.Sim.Types
                     Unit.Thread
                     Unit.Thread.Command
                     Unit.Thread.Command.Body
                     Unit.Thread.Command.Spawn
                     Unit.Thread.Command.Lifecycle
                     Unit.Thread.Command.Motion
                     Unit.Thread.Command.Pose
                     Unit.Thread.Movement
                     Unit.Thread.Movement.Types
                     Unit.Thread.Movement.Leap
                     Unit.Thread.Movement.Fall
                     Unit.Thread.Movement.Timers
                     Unit.Thread.Movement.Climb
                     Unit.Thread.Movement.PathAdvance
                     Building.Types
                     Building.Command.Types
                     Building.Thread.Command
                     Building.Render
                     Building.Placement
                     Building.HitTest
                     Structure.Types
                     Structure.Render
                     Engine.Asset.YamlBuildings
                     Engine.Scripting.Lua.API.Buildings
                     Engine.Scripting.Lua.API.Buildings.Yaml
                     Engine.Scripting.Lua.API.Buildings.Spawn
                     Engine.Scripting.Lua.API.Buildings.Progress
                     Engine.Scripting.Lua.API.Buildings.Materials
                     Engine.Scripting.Lua.API.Buildings.Query
                     Engine.Scripting.Lua.API.Buildings.Selection
                     Engine.Scripting.Lua.API.Structure
                     Engine.Scripting.Lua.API.Construct
                     Engine.Scripting.Lua.API.Chop
                     Engine.Scripting.Lua.API.Till
                     Engine.Scripting.Lua.API.Plant
                     Engine.Scripting.Lua.API.Yaml
                     Structure.Palette
                     Engine.Scripting.Lua.API.Combat
                     Item.Types
                     Item.Roll
                     Item.Temperature
                     Engine.Asset.YamlItems
                     Engine.Scripting.Lua.API.Items
                     Equipment.Types
                     Engine.Asset.YamlEquipment
                     Engine.Scripting.Lua.API.Equipment
                     Engine.Scripting.Lua.API.Equipment.Class
                     Engine.Scripting.Lua.API.Equipment.Slot
                     Engine.Scripting.Lua.API.Equipment.Accessory
                     Engine.Scripting.Lua.API.Equipment.Render
                     Substance.Types
                     Engine.Asset.YamlSubstance
                     Engine.Scripting.Lua.API.Substance
                     Infection.Types
                     Engine.Asset.YamlInfection
                     Engine.Scripting.Lua.API.Infection
                     Craft.Types
                     Craft.Execute
                     Craft.Bills
                     Engine.Asset.YamlRecipes
                     Engine.Scripting.Lua.API.Craft
                     Engine.Scripting.Lua.API.Craft.Recipe
                     Engine.Scripting.Lua.API.Craft.Execute
                     Engine.Scripting.Lua.API.Craft.Bill
                     Power.Types
                     Power.Network
                     Engine.Scripting.Lua.API.Power
                     Engine.Scripting.Lua.API.Repair
                     Blood.Types
                     Blood.Texture
                     Blood.Render
                     Blood.Impact
                     Engine.Scripting.Lua.API.Blood
                     Location.Types
                     Location.Overlay.Types
                     Location.Overlay
                     Engine.Asset.YamlLocations
                     Engine.Scripting.Lua.API.Locations
                     LootTable.Types
                     LootTable.Roll
                     Engine.Asset.YamlLootTables
                     Engine.Scripting.Lua.API.LootTables
                     Sim.Thread
                     Sim.Command.Types
                     Combat.Types
                     Combat.Thread
                     Combat.Resolution
                     Combat.Wounds
                     Combat.Wounds.Bleed
                     Combat.Wounds.Constants
                     Combat.Wounds.Healing
                     Combat.Wounds.Infection
                     Combat.Wounds.Sever
                     Combat.Wounds.Tick
                     Sim.State.Types
                     Sim.Fluid.Types
                     Sim.Fluid.Active
                     World.Base
                     World.Constants
                     World.Command.Types
                     World.Chunk.Types
                     World.Cursor.Types
                     World.Edit.Types
                     World.Edit.Apply
                     World.Types
                     World.Thread
                     World.Thread.Helpers
                     World.Thread.Cursor
                     World.Thread.Time
                     World.Thread.ItemTemp
                     World.Thread.Power
                     World.Thread.ChunkLoading
                     World.Thread.Command
                     World.Thread.Command.Basic
                     World.Thread.Command.Init
                     World.Thread.Command.Save
                     World.Thread.Command.Save.RestoreIds
                     World.Thread.Command.Save.WriteWorld
                     World.Thread.Command.Save.LoadPage
                     World.Thread.Command.Save.LoadWorld
                     World.Thread.Command.Time
                     World.Thread.Command.Cursor
                     World.Thread.Command.Texture
                     World.Thread.Command.UI
                     World.Thread.Command.Edit
                     World.Thread.Command.Edit.Sync
                     World.Thread.Command.Edit.Terrain
                     World.Thread.Command.Edit.Structure
                     World.Thread.Command.Edit.Vegetation
                     World.Thread.Command.Edit.Dig
                     World.Thread.Command.Edit.Fluid
                     World.Thread.Command.Location
                     World.Grid
                     World.Render
                     World.Render.Camera
                     World.Render.Camera.Types
                     World.Render.ViewBounds
                     World.Render.ChunkCulling
                     World.Render.HitTest
                     World.Render.Quads
                     World.Render.WaterSlope
                     World.Render.CursorQuads
                     World.Render.TileQuads
                     World.Render.FloraQuads
                     World.Render.GroundItemQuads
                     World.Render.SideDecoQuads
                     World.Render.Textures
                     World.Render.Textures.Types
                     World.Render.Zoom.Types
                     World.Render.Zoom.Bake
                     World.Render.Zoom.ViewBounds
                     World.Render.Zoom.Climate
                     World.Render.Zoom.Textures
                     World.Render.Zoom.Quads
                     World.Render.Zoom.Cursor
                     World.Render.Zoom.Background
                     World.Generate
                     World.Generate.Arena
                     World.Generate.Constants
                     World.Generate.Coordinates
                     World.Generate.Chunk
                     World.Generate.Chunk.Fluid
                     World.Generate.Chunk.SoilGates
                     World.Generate.Chunk.Columns
                     World.Generate.Chunk.Zoom
                     World.Generate.InitTerrain
                     World.Generate.Timeline
                     World.Generate.Timeline.Fast
                     World.Generate.Strata
                     World.Generate.Types
                     World.Generate.Config
                     World.Generate.Config.Types
                     World.Generate.Config.Normalize
                     World.Generate.Config.IO
                     World.Geology
                     World.Geology.Types
                     World.Geology.Ore
                     World.Geology.Ore.Types
                     World.Mine.Types
                     World.Construct.Types
                     World.Construct.Apply
                     World.Chop.Types
                     World.Till.Types
                     World.Plant.Types
                     World.Render.SpoilQuads
                     World.Render.BloodQuads
                     World.Gem
                     World.Spoil.Logic
                     World.Spoil.Types
                     World.Mine.Apply
                     Item.Ground
                     World.Geology.Log
                     World.Geology.Hash
                     World.Geology.Crater
                     World.Geology.Volcano
                     World.Geology.Generate
                     World.Geology.Evolution
                     World.Geology.Timeline
                     World.Geology.Timeline.Types
                     World.Geology.Timeline.Helpers
                     World.Geology.Timeline.Volcanism
                     World.Geology.Timeline.River
                     World.Geology.Timeline.RiverTrace
                     World.Geology.Timeline.Loop
                     World.Geology.Timeline.Stitch
                     World.Geology.Timeline.Compact
                     World.Geology.Coastal
                     World.Geology.Coastal.Types
                     World.Geology.Coastal.Constants
                     World.Geology.Coastal.RiverMouth
                     World.Geology.Coastal.Noise
                     World.Geology.Coastal.Material
                     World.Geology.Coastal.Distance
                     World.Geology.Coastal.Smoothing
                     World.Geology.Coastal.Breach
                     World.Fluid.Seabed
                     World.Fluid.Seabed.Types
                     World.Fluid.OceanMask
                     World.Geology.Erosion
                     World.Geology.Event
                     World.Hydrology.Types
                     World.Hydrology.Event
                     World.Hydrology.Simulation
                     World.Hydrology.WaterTable
                     World.Hydrology.River
                     World.Hydrology.River.Meander
                     World.Hydrology.River.Tributary
                     World.Hydrology.River.Carving
                     World.Hydrology.River.Common
                     World.River.Graph
                     World.Hydrology.Glacier
                     World.Hydrology.Glacier.Common
                     World.Hydrology.Glacier.Generation
                     World.Hydrology.Glacier.Carving
                     World.Hydrology.Glacier.Evolution
                     World.Hydrology.Glacier.Spawn
                     World.Ocean.Types
                     World.Page.Types
                     World.Plate
                     World.Plate.Types
                     World.Region.Types
                     World.State.Types
                     World.Save.Types
                     World.Save.Serialize
                     World.Scale
                     World.Slope
                     World.Slope.Compute
                     World.Slope.EdgePatch
                     World.Slope.FaceMaps
                     World.Slope.Recompute
                     World.Slope.Roughness
                     World.SideFace.Base
                     World.SideFace.Types
                     World.SideFace.Compute
                     World.Texture.Types
                     World.Tool.Types
                     World.Tile.Types
                     World.Time.Types
                     World.Time.Local
                     World.Flora.Types
                     World.Flora.Growth
                     World.Flora.Placement
                     World.Flora.Render
                     World.Flora.Harvest
                     World.Flora.CropPlot
                     World.Fluids
                     World.Fluid.Types
                     World.Fluid.Internal
                     World.Fluid.Ocean
                     World.Fluid.River
                     World.Fluid.Ice
                     World.Fluid.IceLevel
                     World.Fluid.Lake.Types
                     World.Fluid.Lake.Identify
                     World.Fluid.Lake.Graben
                     World.Fluid.River.Types
                     World.Fluid.River.Identify
                     World.Fluid.River.Identify.Common
                     World.Fluid.River.Identify.Flow
                     World.Fluid.River.Identify.Components
                     World.Fluid.River.Identify.Breakthrough
                     World.Fluid.River.Identify.BedDepth
                     World.Fluid.River.Identify.ChunkIndex
                     World.Fluid.Lava
                     World.Magma.Overlay
                     World.Magma.Types
                     World.Magma.Field
                     World.Magma.Shape
                     World.Magma.Kit
                     World.Magma.Lookup
                     World.Magma.Pool
                     World.Magma.Init
                     World.Vegetation
                     World.Weather
                     World.Weather.Types
                     World.Weather.Log
                     World.Weather.Generate
                     World.Weather.Lookup
                     World.Weather.Ambient
                     World.Material
                     World.Material.Id
                     World.Preview
                     World.ZoomMap
                     World.ZoomMap.Cache
                     World.ZoomMap.ChunkTexture
                     World.ZoomMap.ColorPalette
    default-extensions: FlexibleInstances
    other-extensions: Strict
                    , StrictData
                    , TemplateHaskell
    build-depends: base >=4.20 && <5
                 , base-unicode-symbols
                 , bytestring
                 , containers
                 , exceptions
                 , filepath
                 , directory
                 , hashable
                 , GLFW-b
                 , hslua
                 , JuicyPixels
                 , linear
                 , monad-logger
                 , mtl
                 , network
                 , stm
                 , text
                 , time
                 , array
                 , vector
                 , vector-algorithms
                 , vector-th-unbox
                 , primitive
                 , cereal
                 , yaml
                 , aeson
                 , random
                 , deepseq
                 , parallel
                 , unordered-containers
                 , vulkan
                 , vulkan-utils
                 , template-haskell
                 , unliftio
                 , unliftio-core
                 , utf8-string
                 , unix
    pkgconfig-depends: vulkan
    hs-source-dirs: src
    c-sources:
        cbits/font_stb.c
        cbits/lua_debug.c
    include-dirs:
        cbits

executable synarchy
    import: warnings, lang, build-policy
    -- .hs or .lhs file containing the Main module.
    main-is: Main.hs
    other-modules: App.Cli
                 , App.Exception
                 , App.Graphical
                 , App.Headless
                 , App.Dump
                 , App.Preview
                 , App.ResourceRoot
    default-extensions: FlexibleInstances
    other-extensions: Strict
                    , StrictData
                    , TemplateHaskell
    -- Other library packages from which modules are imported.
    build-depends: base >=4.20 && <5
                 , base-unicode-symbols
                 , bytestring
                 , containers
                 , filepath
                 , directory
                 , GLFW-b
                 , hslua
                 , JuicyPixels
                 , linear
                 , monad-logger
                 , mtl
                 , network
                 , stm
                 , synarchy
                 , text
                 , time
                 , vector
                 , vector-algorithms
                 , vector-th-unbox
                 , cereal
                 , yaml
                 , aeson
                 , random
                 , deepseq
                 , parallel
                 , unordered-containers
                 , vulkan
                 , vulkan-utils
                 , template-haskell
                 , unliftio
                 , unliftio-core
                 , utf8-string
    -- Directories containing source files.
    hs-source-dirs: app
    ghc-options: -rtsopts
                 "-with-rtsopts=-N -A128M"

test-suite synarchy-test-graphical
    import: warnings, lang, build-policy
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Spec.hs
    other-modules: Test.UPrelude
                   Test.Engine.Core.Queue
                   Test.Engine.Core.Var
                   Test.Engine.Input.State
                   Test.Engine.Graphics.Window.GLFW
                   Test.Engine.Graphics.Vulkan.Instance
                   Test.Engine.Graphics.Vulkan.Surface
                   Test.Engine.Graphics.Vulkan.Helpers
                   Test.Engine.Graphics.Vulkan.Device
    build-depends: base >=4.20 && <5
                , base-unicode-symbols
                , async
                , bytestring
                , containers
                , directory
                , filepath
                , hspec
                , hslua
                , JuicyPixels
                , synarchy
                , text
                , monad-logger
                , stm
                , mtl
                , vector
                , vector-algorithms
                , vector-th-unbox
                , cereal
                , yaml
                , aeson
                , random
                , deepseq
                , parallel
                , unordered-containers
                , GLFW-b
                , vulkan
                , vulkan-utils
    ghc-options: "-with-rtsopts=-N -A128M"
    if flag(dev) && os(darwin)
      ghc-options: -fsanitize=address

test-suite synarchy-test-headless
    import: warnings, lang, build-policy
    type: exitcode-stdio-1.0
    hs-source-dirs: test-headless
    main-is: Spec.hs
    other-modules: Test.Headless.Harness
                   Test.Headless.WorldGen
                   Test.Headless.WorldGen.Geology
                   Test.Headless.WorldGen.Parity
                   Test.Headless.WorldGen.Flatness
                   Test.Headless.WorldGen.SoilGate
                   Test.Headless.WorldGen.SoilShed
                   Test.Headless.WorldGen.Exposure
                   Test.Headless.WorldGen.ZoomParity
                   Test.Headless.WorldGen.BorderProbe
                   Test.Headless.WorldGen.WrapSeam
                   Test.Headless.WorldGen.CoastBreach
                   Test.Headless.WorldGen.BedDepth
                   Test.Headless.Unit.Pathing.Cost
                   Test.Headless.Unit.Pathing.AStar
                   Test.Headless.Unit.Pathing.Config
                   Test.Headless.Unit.Render.PickFrame
                   Test.Headless.Unit.Anim
                   Test.Headless.Unit.Injury
                   Test.Headless.Unit.InjurySpeed
                   Test.Headless.Unit.Fall
                   Test.Headless.Unit.Stats
                   Test.Headless.Unit.NightPerception
                   Test.Headless.Item.Temperature
                   Test.Headless.Item.BuffYaml
                   Test.Headless.Item.QualityTier
                   Test.Headless.Asset.TextureFallback
                   Test.Headless.World.Save.Sanitize
                   Test.Headless.World.Save.Serialize
                   Test.Headless.World.CursorInfo
                   Test.Headless.World.SelectTileZ
                   Test.Headless.World.Spoil
                   Test.Headless.Combat.Damage
                   Test.Headless.Combat.Severing
                   Test.Headless.Combat.Wounds
                   Test.Headless.Magma.Shape
                   Test.Headless.Sim.Seam
                   Test.Headless.Input.KeyNames
                   Test.Headless.Input.Bindings
                   Test.Headless.Graphics.VideoConfig
                   Test.Headless.Graphics.AmbientLight
                   Test.Headless.Construct.Corners
                   Test.Headless.Craft.Execute
                   Test.Headless.Craft.Bills
                   Test.Headless.Power.Types
                   Test.Headless.Power.Network
                   Test.Headless.Blood.Types
                   Test.Headless.Blood.Texture
                   Test.Headless.Blood.Impact
                   Test.Headless.UI.Tooltip
                   Test.Headless.World.Calendar
                   Test.Headless.World.TimeLocal
                   Test.Headless.World.FloraGrowth
                   Test.Headless.River.Graph
                   Test.Headless.World.Render.FrontWallLift
                   Test.Headless.World.Render.SideFace
                   Test.Headless.World.Render.SlopeBit
                   Test.Headless.World.Render.ZoomBakeUV
                   Test.Headless.Render.ViewportGuard
                   Test.Headless.Core.ConfigState
                   Test.Headless.Camera.GotoClamp
                   Test.Headless.Camera.ZoomScroll
                   Test.Headless.Scene.BatchMerge
                   Test.Headless.Render.PanMargin
    build-depends: base >=4.20 && <5
                , base-unicode-symbols
                , containers
                , GLFW-b
                , hspec
                , synarchy
                , text
                , stm
                , vector
                , unordered-containers
                , deepseq
                , random
                , linear
                , bytestring
                , cereal
                , yaml
                , directory
                , filepath
    ghc-options: "-with-rtsopts=-N -A128M"
